# pricing-tf

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  buf.yaml  build.rs  diesel.toml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pricing-tf.sln
.github/workflows/: ci.yml  docker.yml  processing-ci.yml  processing-docker.yml  webapi-ci.yml  webapi-docker.yml
migrations/2025-12-08-160351-0000_create_trade_listings/: down.sql  up.sql
migrations/2025-12-10-185938-0000_trade_listing_indices/: down.sql  up.sql
migrations/2025-12-10-191452-0000_item_prices_mviews/: down.sql  up.sql
migrations/2025-12-12-152412-0000_blocked_users/: up.sql
migrations/2025-12-14-190302-0000_trade_item_id/: down.sql  up.sql
protos/pricing_tf/: block_user_service.proto  pricing_service.proto
src/: config.rs  lib.rs  main.rs  protos.rs  schema.rs
src-old/common/: PricingTf.Common.fsproj
src-old/common/Configuration/: PricingCollection.fs
src-old/common/Serialization/: BsonConverters.fs  JsonConverters.fs
src-old/processing/: PricingTf.Processing.fsproj  Program.fs
src-old/processing.tests/: PricingTf.Processing.Tests.fsproj
src-old/processing.tests/Events/: JsonConverters.fs
src-old/processing.tests/MapReduce/: Etl.fs
src-old/processing.tests/Services/: Db.fs
src-old/processing.tests/__TestUtils__/: TestData.fs
src-old/processing/Events/: BpTfEvents.fs  JsonConverters.fs
src-old/processing/Services/: Db.fs
src-old/processing/Utils/: StringUtils.fs
src-old/webapi/: Program.cs  appsettings.json
src-old/webapi/Mappings/: TradeDetails.cs
src-old/webapi/Protos/: pricingTf.proto
src-old/webapi/Services/: PricingService.cs
src/api/: block_user_service.rs  errors.rs  mod.rs  pricing_service.rs
src/backpack_tf_api/: exchange_rate_controller.rs  facade.rs  mod.rs  payloads.rs
src/common/: PricingTf.Common.fsproj
src/common/Configuration/: PricingCollection.fs
src/common/Models/: BlockedUser.fs  Tf2Currency.fs  TradeListing.fs
src/common/Serialization/: BsonConverters.fs  JsonConverters.fs
src/common/Services/: BackpackTfApi.fs
src/db/: blocked_users.rs  db_pool.rs  mod.rs  workers.rs
src/models/: blocked_user.rs  item_pricing.rs  mod.rs  tf2_currency.rs  trade_listing.rs
src/processing/: Dockerfile  Events.fs  PricingTf.Processing.fsproj  Program.fs  appsettings.json  etl.rs  mod.rs  pricing_event.rs  worker.rs
src/processing.tests/Events/: BpTfEvents.fs
src/processing.tests/MapReduce/: Etl.fs
src/processing.tests/Utils/: StringUtils.fs
src/processing.tests/__TestUtils__/: TestData.fs
src/processing/Actors/: BlockedUsersAgent.fs
src/processing/Events/: BpTfEvents.fs  JsonConverters.fs
src/processing/MapReduce/: Etl.fs
src/processing/Models/: Listing.fs  Pricing.fs  Tf2Currency.fs  TradeItem.fs  TradeListing.fs
src/processing/Services/: BackpackTfApi.fs  Db.fs
src/processing/Workers/: TfPrices.fs
src/schema/: generated.rs  manual.rs  mod.rs
src/webapi/: Dockerfile  PricingTf.WebApi.csproj  Program.cs  appsettings.json
src/webapi/Configuration/: BackpackTfConfiguration.cs  (+1 more)
(+14 files in other folders)
