[package]
name = "pricing-tf"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.3.4", features = ["chrono", "postgres", "uuid"] }
diesel-async = { version = "0.7.4", features = ["deadpool", "postgres"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
prost = "0.14.1"
prost-types = { version = "0.14.1", features = ["chrono"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["serde"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
